# Scale-Space

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
Source/: ExtraLookAndFeel.h  MultiDimensionalPad.cpp  MultiDimensionalPad.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleBox.cpp  ScaleBox.h  TuningEditor.cpp  TuningEditor.h
libs/oddsound-mts/: CMakeLists.txt
